      submitter Waleed K. Abdulla and the anonymous poster with the fix [1549749]
    * Fixed transformToFragment bug thanks to Robert Sanders
    * Fixed Sarissa.copyChildNodes thanks to Waleed K. Abdulla
    * Fixed selectSingleNode bug thanks to Joao Eiras 
    * Made document.importNode a bit smarter to stop IE from getting too clever for it's own good
      thanks to Duncan Booth

0.9.7.3
    * Fixed transformToFragment bug in IE thanks to Simon Biickert

0.9.7.2
    * Fixed err, typo in sarissa_dhtml.js thanks to aevarga and apb2006 (SF users)
    * Fixed namespace format checking in Sarissa.setXpathNamespaces thanks to Andrew Grooom 

0.9.7.1
    * Added XSLTProcessor.transformToFragment along with ECMAUnit
      tests thanks to John Hax
    * Fixed missing parenthesis typo/error in sarissa_dhtml.js thanks to
      aevarga (SF user) and Marco Ratto
    * Fixed some style.cursor error thanks to aevarga (SF user)
    * Fixed build.xml to convert line endings to be friendly to windows users 
      thanks to John Hax
    * Fixed declarations for window.Sarissa to load properly in different contexts 
      thanks to John Hax
    * Optimised XSLTProcessor.importStylesheet for IE; it will now reload a remote 
      stylesheet from the server only if it contains xsl:include or xsl:import elements
      to resolve those properly, also made it clear in API documentation
    * Added support for importing HTML nodes in document.importNode (only worked with XML)
    * Upgraded JSDoc to 1.9.9.2
    * Added appropriate references to JSLint in credits and documentation (coolest license ever)
    * Fixed  bad CSS font size units from 'pts' to 'pt', guess i was thinking of spare 
      parts or something
    * Changed "gredits" to "credits" in changelog and docos, thanks to Peter (pbb72 SF user). 
      As i  explained i have been unable to ovecome this re-occuring typo for the last 10  
      years due to my coin-op (video game arcades) addiction as a kid ;-)

0.9.7