@@ -1,0 +1,3 @@
+#Sat Nov 04 21:28:18 EET 2006
+eclipse.preferences.version=1
+line.separator=\n
