@@ -1,4 +1,7 @@
-/** * ==================================================================== * About * ==================================================================== * Sarissa is an ECMAScript library acting as a cross-browser wrapper for native XML APIs. * The library supports Gecko based browsers like Mozilla and Firefox, * Internet Explorer (5.5+ with MSXML3.0+), Konqueror, Safari and a little of Opera * @version @sarissa.version@ * @author: Manos Batsis, mailto: mbatsis at users full stop sourceforge full stop net * ==================================================================== * Licence * ==================================================================== * Sarissa is free software distributed under the GNU GPL version 2 (see <a href="gpl.txt">gpl.txt</a>) or higher,  * GNU LGPL version 2.1 (see <a href="lgpl.txt">lgpl.txt</a>) or higher and Apache Software License 2.0 or higher  * (see <a href="asl.txt">asl.txt</a>). This means you can choose one of the three and use that if you like. If  * you make modifications under the ASL, i would appreciate it if you submitted those. * In case your copy of Sarissa does not include the license texts, you may find * them online in various formats at <a href="http://www.gnu.org">http://www.gnu.org</a> and  * <a href="http://www.apache.org">http://www.apache.org</a>. * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY  * KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE  * WARRANTIES OF MERCHANTABILITY,FITNESS FOR A PARTICULAR PURPOSE  * AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR  * COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR  * OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE  * SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE. *//** * <p>Sarissa is a utility class. Provides "static" methods for DOMDocument,  * DOM Node serialization to XML strings and other utility goodies.</p> * @constructor */function Sarissa(){};Sarissa.PARSED_OK = "Document contains no parsing errors";Sarissa.PARSED_EMPTY = "Document is empty";Sarissa.PARSED_UNKNOWN_ERROR = "Not well-formed or other error";var _sarissa_iNsCounter = 0;var _SARISSA_IEPREFIX4XSLPARAM = "";var _SARISSA_HAS_DOM_IMPLEMENTATION = document.implementation && true;var _SARISSA_HAS_DOM_CREATE_DOCUMENT = _SARISSA_HAS_DOM_IMPLEMENTATION && document.implementation.createDocument;var _SARISSA_HAS_DOM_FEATURE = _SARISSA_HAS_DOM_IMPLEMENTATION && document.implementation.hasFeature;var _SARISSA_IS_MOZ = _SARISSA_HAS_DOM_CREATE_DOCUMENT && _SARISSA_HAS_DOM_FEATURE;var _SARISSA_IS_SAFARI = (navigator.userAgent && navigator.vendor && (navigator.userAgent.toLowerCase().indexOf("applewebkit") != -1 || navigator.vendor.indexOf("Apple") != -1));var _SARISSA_IS_IE = document.all && window.ActiveXObject && navigator.userAgent.toLowerCase().indexOf("msie") > -1  && navigator.userAgent.toLowerCase().indexOf("opera") == -1;if(!window.Node || !Node.ELEMENT_NODE){    Node = {ELEMENT_NODE: 1, ATTRIBUTE_NODE: 2, TEXT_NODE: 3, CDATA_SECTION_NODE: 4, ENTITY_REFERENCE_NODE: 5,  ENTITY_NODE: 6, PROCESSING_INSTRUCTION_NODE: 7, COMMENT_NODE: 8, DOCUMENT_NODE: 9, DOCUMENT_TYPE_NODE: 10, DOCUMENT_FRAGMENT_NODE: 11, NOTATION_NODE: 12};};if(typeof XMLDocument == "undefined" && typeof Document !="undefined"){ XMLDocument = Document; } // IE initializationif(_SARISSA_IS_IE){    // for XSLT parameter names, prefix needed by IE    _SARISSA_IEPREFIX4XSLPARAM = "xsl:";    // used to store the most recent ProgID available out of the above    var _SARISSA_DOM_PROGID = "";    var _SARISSA_XMLHTTP_PROGID = "";    var _SARISSA_DOM_XMLWRITER = "";    /**     * Called when the Sarissa_xx.js file is parsed, to pick most recent     * ProgIDs for IE, then gets destroyed.     * @private     * @param idList an array of MSXML PROGIDs from which the most recent will be picked for a given object     * @param enabledList an array of arrays where each array has two items; the index of the PROGID for which a certain feature is enabled     */    Sarissa.pickRecentProgID = function (idList){        // found progID flag        var bFound = false;        for(var i=0; i < idList.length && !bFound; i++){            try{                var oDoc = new ActiveXObject(idList[i]);                o2Store = idList[i];                bFound = true;            }catch (objException){                // trap; try next progID            };        };        if (!bFound) {            throw "Could not retreive a valid progID of Class: " + idList[idList.length-1]+". (original exception: "+e+")";        };        idList = null;        return o2Store;    };    // pick best available MSXML progIDs    _SARISSA_DOM_PROGID = null;    _SARISSA_THREADEDDOM_PROGID = null;    _SARISSA_XSLTEMPLATE_PROGID = null;    _SARISSA_XMLHTTP_PROGID = null;    if(!window.XMLHttpRequest){        /**         * Emulate XMLHttpRequest         * @constructor         */        XMLHttpRequest = function() {            if(!_SARISSA_XMLHTTP_PROGID){                _SARISSA_XMLHTTP_PROGID = Sarissa.pickRecentProgID(["Msxml2.XMLHTTP.6.0", "MSXML2.XMLHTTP.3.0", "MSXML2.XMLHTTP", "Microsoft.XMLHTTP"]);            };            return new ActiveXObject(_SARISSA_XMLHTTP_PROGID);        };    };    // we dont need this anymore    //============================================    // Factory methods (IE)    //============================================    // see non-IE version    Sarissa.getDomDocument = function(sUri, sName){        if(!_SARISSA_DOM_PROGID){            _SARISSA_DOM_PROGID = Sarissa.pickRecentProgID(["Msxml2.DOMDocument.6.0", "Msxml2.DOMDocument.3.0", "MSXML2.DOMDocument", "MSXML.DOMDocument", "Microsoft.XMLDOM"]);        };        var oDoc = new ActiveXObject(_SARISSA_DOM_PROGID);        // if a root tag name was provided, we need to load it in the DOM object        if (sName){            // create an artifical namespace prefix             // or reuse existing prefix if applicable            var prefix = "";            if(sUri){                if(sName.indexOf(":") > 1){                    prefix = sName.substring(0, sName.indexOf(":"));                    sName = sName.substring(sName.indexOf(":")+1);                 }else{                    prefix = "a" + (_sarissa_iNsCounter++);                };            };            // use namespaces if a namespace URI exists            if(sUri){                oDoc.loadXML('<' + prefix+':'+sName + " xmlns:" + prefix + "=\"" + sUri + "\"" + " />");            } else {                oDoc.loadXML('<' + sName + " />");            };        };        return oDoc;    };    // see non-IE version       Sarissa.getParseErrorText = function (oDoc) {        var parseErrorText = Sarissa.PARSED_OK;        if(oDoc.parseError.errorCode != 0){            parseErrorText = "XML Parsing Error: " + oDoc.parseError.reason +                 "\nLocation: " + oDoc.parseError.url +                 "\nLine Number " + oDoc.parseError.line + ", Column " +                 oDoc.parseError.linepos +                 ":\n" + oDoc.parseError.srcText +                "\n";            for(var i = 0;  i < oDoc.parseError.linepos;i++){                parseErrorText += "-";            };            parseErrorText +=  "^\n";        }        else if(oDoc.documentElement == null){            parseErrorText = Sarissa.PARSED_EMPTY;        };        return parseErrorText;    };    // see non-IE version    Sarissa.setXpathNamespaces = function(oDoc, sNsSet) {        oDoc.setProperty("SelectionLanguage", "XPath");        oDoc.setProperty("SelectionNamespaces", sNsSet);    };       /**     * Basic implementation of Mozilla's XSLTProcessor for IE.      * Reuses the same XSLT stylesheet for multiple transforms     * @constructor     */    XSLTProcessor = function(){        if(!_SARISSA_XSLTEMPLATE_PROGID){            _SARISSA_XSLTEMPLATE_PROGID = Sarissa.pickRecentProgID(["Msxml2.XSLTemplate.6.0", "MSXML2.XSLTemplate.3.0"]);        };        this.template = new ActiveXObject(_SARISSA_XSLTEMPLATE_PROGID);        this.processor = null;    };    /**     * Imports the given XSLT DOM and compiles it to a reusable transform     * <b>Note:</b> If the stylesheet was loaded from a URL and contains xsl:import or xsl:include elements,it will be reloaded to resolve those     * @argument xslDoc The XSLT DOMDocument to import     */    XSLTProcessor.prototype.importStylesheet = function(xslDoc){        if(!_SARISSA_THREADEDDOM_PROGID){            _SARISSA_THREADEDDOM_PROGID = Sarissa.pickRecentProgID(["MSXML2.FreeThreadedDOMDocument.6.0", "MSXML2.FreeThreadedDOMDocument.3.0"]);            _SARISSA_DOM_XMLWRITER = Sarissa.pickRecentProgID(["Msxml2.MXXMLWriter.6.0", "Msxml2.MXXMLWriter.3.0", "MSXML2.MXXMLWriter", "MSXML.MXXMLWriter", "Microsoft.XMLDOM"]);        };        xslDoc.setProperty("SelectionLanguage", "XPath");        xslDoc.setProperty("SelectionNamespaces", "xmlns:xsl='http://www.w3.org/1999/XSL/Transform'");        // convert stylesheet to free threaded        var converted = new ActiveXObject(_SARISSA_THREADEDDOM_PROGID);        // make included/imported stylesheets work if exist and xsl was originally loaded from url        if(xslDoc.url && xslDoc.selectSingleNode("//xsl:*[local-name() = 'import' or local-name() = 'include']") != null){            converted.async = false;            converted.load(xslDoc.url);        } else {            converted.loadXML(xslDoc.xml);        };        converted.setProperty("SelectionNamespaces", "xmlns:xsl='http://www.w3.org/1999/XSL/Transform'");        var output = converted.selectSingleNode("//xsl:output");        this.outputMethod = output ? output.getAttribute("method") : "html";        this.template.stylesheet = converted;        this.processor = this.template.createProcessor();        // (re)set default param values        this.paramsSet = new Array();    };    /**     * Transform the given XML DOM and return the transformation result as a new DOM document     * @argument sourceDoc The XML DOMDocument to transform     * @return The transformation result as a DOM Document     */    XSLTProcessor.prototype.transformToDocument = function(sourceDoc){        // fix for bug 1549749        if(_SARISSA_THREADEDDOM_PROGID == "MSXML2.FreeThreadedDOMDocument.3.0"){            this.processor.input=sourceDoc;
+/** * ==================================================================== * About * ==================================================================== * Sarissa is an ECMAScript library acting as a cross-browser wrapper for native XML APIs. * The library supports Gecko based browsers like Mozilla and Firefox, * Internet Explorer (5.5+ with MSXML3.0+), Konqueror, Safari and a little of Opera * @version @sarissa.version@ * @author: Manos Batsis, mailto: mbatsis at users full stop sourceforge full stop net * ==================================================================== * Licence * ==================================================================== * Sarissa is free software distributed under the GNU GPL version 2 (see <a href="gpl.txt">gpl.txt</a>) or higher,  * GNU LGPL version 2.1 (see <a href="lgpl.txt">lgpl.txt</a>) or higher and Apache Software License 2.0 or higher  * (see <a href="asl.txt">asl.txt</a>). This means you can choose one of the three and use that if you like. If  * you make modifications under the ASL, i would appreciate it if you submitted those. * In case your copy of Sarissa does not include the license texts, you may find * them online in various formats at <a href="http://www.gnu.org">http://www.gnu.org</a> and  * <a href="http://www.apache.org">http://www.apache.org</a>. * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY  * KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE  * WARRANTIES OF MERCHANTABILITY,FITNESS FOR A PARTICULAR PURPOSE  * AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR  * COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR  * OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE  * SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE. *//** * <p>Sarissa is a utility class. Provides "static" methods for DOMDocument,  * DOM Node serialization to XML strings and other utility goodies.</p> * @constructor */function Sarissa(){};Sarissa.PARSED_OK = "Document contains no parsing errors";Sarissa.PARSED_EMPTY = "Document is empty";Sarissa.PARSED_UNKNOWN_ERROR = "Not well-formed or other error";var _sarissa_iNsCounter = 0;var _SARISSA_IEPREFIX4XSLPARAM = "";var _SARISSA_HAS_DOM_IMPLEMENTATION = document.implementation && true;var _SARISSA_HAS_DOM_CREATE_DOCUMENT = _SARISSA_HAS_DOM_IMPLEMENTATION && document.implementation.createDocument;var _SARISSA_HAS_DOM_FEATURE = _SARISSA_HAS_DOM_IMPLEMENTATION && document.implementation.hasFeature;var _SARISSA_IS_MOZ = _SARISSA_HAS_DOM_CREATE_DOCUMENT && _SARISSA_HAS_DOM_FEATURE;var _SARISSA_IS_SAFARI = (navigator.userAgent && navigator.vendor && (navigator.userAgent.toLowerCase().indexOf("applewebkit") != -1 || navigator.vendor.indexOf("Apple") != -1));var _SARISSA_IS_IE = document.all && window.ActiveXObject && navigator.userAgent.toLowerCase().indexOf("msie") > -1  && navigator.userAgent.toLowerCase().indexOf("opera") == -1;if(!window.Node || !Node.ELEMENT_NODE){    Node = {ELEMENT_NODE: 1, ATTRIBUTE_NODE: 2, TEXT_NODE: 3, CDATA_SECTION_NODE: 4, ENTITY_REFERENCE_NODE: 5,  ENTITY_NODE: 6, PROCESSING_INSTRUCTION_NODE: 7, COMMENT_NODE: 8, DOCUMENT_NODE: 9, DOCUMENT_TYPE_NODE: 10, DOCUMENT_FRAGMENT_NODE: 11, NOTATION_NODE: 12};};if(typeof XMLDocument == "undefined" && typeof Document !="undefined"){ XMLDocument = Document; } // IE initializationif(_SARISSA_IS_IE){    // for XSLT parameter names, prefix needed by IE    _SARISSA_IEPREFIX4XSLPARAM = "xsl:";    // used to store the most recent ProgID available out of the above    var _SARISSA_DOM_PROGID = "";    var _SARISSA_XMLHTTP_PROGID = "";    var _SARISSA_DOM_XMLWRITER = "";    /**     * Called when the Sarissa_xx.js file is parsed, to pick most recent     * ProgIDs for IE, then gets destroyed.     * @private     * @param idList an array of MSXML PROGIDs from which the most recent will be picked for a given object     * @param enabledList an array of arrays where each array has two items; the index of the PROGID for which a certain feature is enabled     */    Sarissa.pickRecentProgID = function (idList){        // found progID flag        var bFound = false;        for(var i=0; i < idList.length && !bFound; i++){            try{                var oDoc = new ActiveXObject(idList[i]);                o2Store = idList[i];                bFound = true;            }catch (objException){                // trap; try next progID            };        };        if (!bFound) {            throw "Could not retreive a valid progID of Class: " + idList[idList.length-1]+". (original exception: "+e+")";        };        idList = null;        return o2Store;    };    // pick best available MSXML progIDs    _SARISSA_DOM_PROGID = null;    _SARISSA_THREADEDDOM_PROGID = null;    _SARISSA_XSLTEMPLATE_PROGID = null;    _SARISSA_XMLHTTP_PROGID = null;    if(!window.XMLHttpRequest){        /**         * Emulate XMLHttpRequest         * @constructor         */        XMLHttpRequest = function() {            if(!_SARISSA_XMLHTTP_PROGID){                _SARISSA_XMLHTTP_PROGID = Sarissa.pickRecentProgID(["Msxml2.XMLHTTP.6.0", "MSXML2.XMLHTTP.3.0", "MSXML2.XMLHTTP", "Microsoft.XMLHTTP"]);            };            return new ActiveXObject(_SARISSA_XMLHTTP_PROGID);        };    };    // we dont need this anymore    //============================================    // Factory methods (IE)    //============================================    // see non-IE version    Sarissa.getDomDocument = function(sUri, sName){        if(!_SARISSA_DOM_PROGID){            _SARISSA_DOM_PROGID = Sarissa.pickRecentProgID(["Msxml2.DOMDocument.6.0", "Msxml2.DOMDocument.3.0", "MSXML2.DOMDocument", "MSXML.DOMDocument", "Microsoft.XMLDOM"]);        };        var oDoc = new ActiveXObject(_SARISSA_DOM_PROGID);        // if a root tag name was provided, we need to load it in the DOM object        if (sName){            // create an artifical namespace prefix             // or reuse existing prefix if applicable            var prefix = "";            if(sUri){                if(sName.indexOf(":") > 1){                    prefix = sName.substring(0, sName.indexOf(":"));                    sName = sName.substring(sName.indexOf(":")+1);                 }else{                    prefix = "a" + (_sarissa_iNsCounter++);                };            };            // use namespaces if a namespace URI exists            if(sUri){                oDoc.loadXML('<' + prefix+':'+sName + " xmlns:" + prefix + "=\"" + sUri + "\"" + " />");            } else {                oDoc.loadXML('<' + sName + " />");            };        };        return oDoc;    };    // see non-IE version       Sarissa.getParseErrorText = function (oDoc) {        var parseErrorText = Sarissa.PARSED_OK;        if(oDoc.parseError.errorCode != 0){            parseErrorText = "XML Parsing Error: " + oDoc.parseError.reason +                 "\nLocation: " + oDoc.parseError.url +                 "\nLine Number " + oDoc.parseError.line + ", Column " +                 oDoc.parseError.linepos +                 ":\n" + oDoc.parseError.srcText +                "\n";            for(var i = 0;  i < oDoc.parseError.linepos;i++){                parseErrorText += "-";            };            parseErrorText +=  "^\n";        }        else if(oDoc.documentElement == null){            parseErrorText = Sarissa.PARSED_EMPTY;        };        return parseErrorText;    };    // see non-IE version    Sarissa.setXpathNamespaces = function(oDoc, sNsSet) {        oDoc.setProperty("SelectionLanguage", "XPath");        oDoc.setProperty("SelectionNamespaces", sNsSet);    };       /**     * Basic implementation of Mozilla's XSLTProcessor for IE.      * Reuses the same XSLT stylesheet for multiple transforms     * @constructor     */    XSLTProcessor = function(){        if(!_SARISSA_XSLTEMPLATE_PROGID){            _SARISSA_XSLTEMPLATE_PROGID = Sarissa.pickRecentProgID(["Msxml2.XSLTemplate.6.0", "MSXML2.XSLTemplate.3.0"]);        };        this.template = new ActiveXObject(_SARISSA_XSLTEMPLATE_PROGID);        this.processor = null;    };    /**     * Imports the given XSLT DOM and compiles it to a reusable transform     * <b>Note:</b> If the stylesheet was loaded from a URL and contains xsl:import or xsl:include elements,it will be reloaded to resolve those     * @argument xslDoc The XSLT DOMDocument to import     */    XSLTProcessor.prototype.importStylesheet = function(xslDoc){        if(!_SARISSA_THREADEDDOM_PROGID){            _SARISSA_THREADEDDOM_PROGID = Sarissa.pickRecentProgID(["MSXML2.FreeThreadedDOMDocument.6.0", "MSXML2.FreeThreadedDOMDocument.3.0"]);            _SARISSA_DOM_XMLWRITER = Sarissa.pickRecentProgID(["Msxml2.MXXMLWriter.6.0", "Msxml2.MXXMLWriter.3.0", "MSXML2.MXXMLWriter", "MSXML.MXXMLWriter", "Microsoft.XMLDOM"]);        };        xslDoc.setProperty("SelectionLanguage", "XPath");        xslDoc.setProperty("SelectionNamespaces", "xmlns:xsl='http://www.w3.org/1999/XSL/Transform'");        // convert stylesheet to free threaded        var converted = new ActiveXObject(_SARISSA_THREADEDDOM_PROGID);        // make included/imported stylesheets work if exist and xsl was originally loaded from url        if(xslDoc.url && xslDoc.selectSingleNode("//xsl:*[local-name() = 'import' or local-name() = 'include']") != null){            converted.async = false;            if (_SARISSA_THREADEDDOM_PROGID == "MSXML2.FreeThreadedDOMDocument.6.0") { 
+                converted.setProperty("AllowDocumentFunction", true); 
+                converted.resolveExternals = true; 
+            }            converted.load(xslDoc.url);        } else {            converted.loadXML(xslDoc.xml);        };        converted.setProperty("SelectionNamespaces", "xmlns:xsl='http://www.w3.org/1999/XSL/Transform'");        var output = converted.selectSingleNode("//xsl:output");        this.outputMethod = output ? output.getAttribute("method") : "html";        this.template.stylesheet = converted;        this.processor = this.template.createProcessor();        // (re)set default param values        this.paramsSet = new Array();    };    /**     * Transform the given XML DOM and return the transformation result as a new DOM document     * @argument sourceDoc The XML DOMDocument to transform     * @return The transformation result as a DOM Document     */    XSLTProcessor.prototype.transformToDocument = function(sourceDoc){        // fix for bug 1549749        if(_SARISSA_THREADEDDOM_PROGID == "MSXML2.FreeThreadedDOMDocument.3.0"){            this.processor.input=sourceDoc;
             var outDoc=new ActiveXObject(_SARISSA_DOM_PROGID);
             this.processor.output=outDoc;
             this.processor.transform();
